crates/pardosa-schema/tests/compile_fail/serde_adjacent_tagged.stderr
error: EVT-009: GenomeSafe: #[serde(tag = "...")] is not supported on type. Only externally tagged enums (serde default) are compatible with fixed discriminant-based layout.
 --> tests/compile_fail/serde_adjacent_tagged.rs:3:9
  |
3 | #[serde(tag = "type", content = "data")]
  |         ^^^

error: cannot find attribute `serde` in this scope
 --> tests/compile_fail/serde_adjacent_tagged.rs:3:3
  |
3 | #[serde(tag = "type", content = "data")]
  |   ^^^^^
  |
  = note: `serde` is in scope, but it is a crate, not an attribute
help: `serde` is an attribute that can be used by the derive macros `Deserialize` and `Serialize`, you might be missing a `derive` attribute
  |
4 + #[derive(Deserialize, Serialize)]
5 | enum Bad {
  |
